--- a/nextflow.config
+++ b/nextflow.config
@@ -24,15 +24,15 @@ params {
     multiqc_methods_description = null
 
     // Boilerplate options
-    outdir                     = null
+    outdir                     = '/Users/mac_studio_np/Documents/nextflow_repos/phipseq/nf-core-phipseqtpvac/outputDir'
     publish_dir_mode           = 'copy'
-    email                      = null
-    email_on_fail              = null
-    plaintext_email            = false
-    monochrome_logs            = false
-    hook_url                   = null
+    // email                      = null
+    // email_on_fail              = null
+    // plaintext_email            = false
+    // monochrome_logs            = false
+    // hook_url                   = null
     help                       = false
-    version                    = false
+    // version                    = false
 
     // Config options
     config_profile_name        = null
