feat: added cutadapt module, configured module.config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,6 +18,14 @@ process {
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
 
+
+    withName: CUTADAPT {
+        ext.args = '-u 44 -U 66'
+        publishDir = ["${params.outdir}/cutadapt_out"]
+
+    }
+
+
     withName: FASTQC {
         ext.args = '--quiet'
     }
