--- a/nextflow.config
+++ b/nextflow.config
@@ -32,7 +32,7 @@ params {
     // monochrome_logs            = false
     // hook_url                   = null
     help                       = false
-    // version                    = false
+    version                    = false
 
     // Config options
     config_profile_name        = null
