feat: added cutadapt -u and -U param defaults and enabled user to change them if nessessary

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,6 +23,10 @@ params {
     max_multiqc_email_size     = '25.MB'
     multiqc_methods_description = null
 
+    // Cutadapt options
+    trimR1                      = 44
+    trimR2                      = 66
+
     // Boilerplate options
     outdir                     = '/Users/mac_studio_np/Documents/nextflow_repos/phipseq/nf-core-phipseqtpvac/outputDir'
     publish_dir_mode           = 'copy'
