--- a/conf/modules.config
+++ b/conf/modules.config
@@ -20,7 +20,7 @@ process {
 
 
     withName: CUTADAPT {
-        ext.args = "-u ${params.trimR1} -U ${params.trimR2}"
+        ext.args = { "-u ${params.trimR1} -U ${params.trimR2}" }
         publishDir = ["${params.outdir}/cutadapt_out"]
 
     }
