--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,7 @@ params {
 
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
-    input                      = null
+    inputFastaDir                      = null
     // References
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes/'
