feat: modified module.config to save cutadapt output logs and fastq files in two different folders

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -21,8 +21,20 @@ process {
 
     withName: CUTADAPT {
         ext.args = { "-u ${params.trimR1} -U ${params.trimR2}" }
-        publishDir = ["${params.outdir}/cutadapt_out"]
-
+        publishDir = [
+            [
+                path: { "${params.outdir}/cutadapt_out/trimmed_fastq" },
+                mode: params.publish_dir_mode,
+                pattern: '*.fastq.gz',
+                enabled: true
+            ],
+            [
+                path: { "${params.outdir}/cutadapt_out/logs" },
+                mode: params.publish_dir_mode,
+                pattern: '*.log',
+                enabled: true
+            ]
+        ]
     }
 
 
