fix: integrating kallisto. unfortunatly, the module has a bug I can't bypass without modifying the source code. I modified the module main.nf file but saved the intact version alongside. will be revisiting it once I get reply from the maintainer of the module

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -37,6 +37,13 @@ process {
         ]
     }
 
+    withName: KALLISTO_QUANT {
+        ext.args = { "--plaintext" }
+        publishDir = [
+            "${params.outdir}/kallisto_out"
+        ]
+    }
+
 
     withName: FASTQC {
         ext.args = '--quiet'
