--- a/nextflow.config
+++ b/nextflow.config
@@ -27,6 +27,9 @@ params {
     trimR1                      = 44
     trimR2                      = 66
 
+    // kallisto_quant options
+    kal_index_ref               = '/Users/mac_studio_np/Documents/references/phipseq_ref_kallisto/tp_oligos_kallisto'
+
     // Boilerplate options
     outdir                     = '/Users/mac_studio_np/Documents/nextflow_repos/phipseq/nf-core-phipseqtpvac/outputDir'
     publish_dir_mode           = 'copy'
