refactor: changed kallisto output to be copied in one dir.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -39,8 +39,14 @@ process {
 
     withName: KALLISTO_QUANT {
         ext.args = { "--plaintext" }
+
         publishDir = [
-            "${params.outdir}/kallisto_out"
+            [
+                path: { "${params.outdir}/kallisto_out/results" },
+                mode: params.publish_dir_mode,
+                pattern: '*',
+                enabled: true
+            ]
         ]
     }
 
