fix: fixed kallisto bug with optional inputs. The module evaluated the path to optional files but nextflow in fact does not suppot optional agruments at this timepoing. Therefore, one could only pass a valid file path as an input to kallisto module but inside of the module that will lead to kallisto throwing an error due to invalid input.

--- a/nextflow.config
+++ b/nextflow.config
@@ -29,9 +29,13 @@ params {
 
     // kallisto_quant options
     kal_index_ref               = '/Users/mac_studio_np/Documents/references/phipseq_ref_kallisto/tp_oligos_kallisto'
+    kal_gtf                     = "$projectDir/assets/GTF_NO_FILE"
+    kal_chromosomes             = "$projectDir/assets/CHROMOSOMES_NO_FILE"
+    kal_fragment_length         = ''
+    kal_fragment_length_sd      = ''
 
     // Boilerplate options
-    outdir                     = '/Users/mac_studio_np/Documents/nextflow_repos/phipseq/nf-core-phipseqtpvac/outputDir'
+    outdir                     = "$projectDir/outputDir"
     publish_dir_mode           = 'copy'
     // email                      = null
     // email_on_fail              = null
@@ -277,3 +281,9 @@ def check_max(obj, type) {
         }
     }
 }
+
+
+
+
+
+
