--- a/nextflow.config
+++ b/nextflow.config
@@ -9,9 +9,8 @@
 // Global default params, used in configs
 params {
 
-    // TODO nf-core: Specify your pipeline's command line flags
-    // Input options
-    inputFastaDir                      = null
+    // TODO nf-core: Specify your pipeline's command line flags       
+        
     // References
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes/'
@@ -35,7 +34,8 @@ params {
     kal_fragment_length_sd      = ''
 
     // Boilerplate options
-    outdir                     = "$projectDir/outputDir"
+    indir              =  "$projectDir/data"    
+    outdir                     = "$projectDir/results"
     publish_dir_mode           = 'copy'
     // email                      = null
     // email_on_fail              = null
