fix: added minimim read length argument for cutadapt to equal 20. otherwise, cutadapt produces files with zero length reads which breaks bowtie dowstream

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -20,7 +20,7 @@ process {
 
 
     withName: CUTADAPT {
-        ext.args = { "-u ${params.trimR1} -U ${params.trimR2}" }
+        ext.args = { "-u ${params.trimR1} -U ${params.trimR2} -m 20" }
         publishDir = [
             [
                 path: { "${params.outdir}/cutadapt_out/trimmed_fastq" },
