feat: parsing callisto output into a single count csv table added as a separate local process

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -49,6 +49,20 @@ process {
         ]
     }
 
+    withName: PARSE_KALLISTO_OUTPUT {
+        ext.args = { "" }
+        publishDir = [
+            [
+                path: { "${params.outdir}/parsed_raw_counts" },
+                mode: params.publish_dir_mode,
+                pattern: '*',
+                enabled: true
+            ]
+        ]
+    }
+
+
+
 
     withName: FASTQC {
         ext.args = '--quiet'
