--- a/nextflow.config
+++ b/nextflow.config
@@ -36,6 +36,7 @@ params {
     // Boilerplate options
     indir              =  "$projectDir/data"    
     outdir                     = "$projectDir/results"
+    target_keys                = "$projectDir/assets/GENERIC_NO_FILE"
     publish_dir_mode           = 'copy'
     // email                      = null
     // email_on_fail              = null
