misc: replacing link to local default library keys and kallisto index files to S3 hosted

--- a/nextflow.config
+++ b/nextflow.config
@@ -27,7 +27,7 @@ params {
     trimR2                      = 66
 
     // kallisto_quant options
-    kal_index_ref               = '/Users/mac_studio_np/Documents/references/phipseq_ref_kallisto/tp_oligos_kallisto'
+    kal_index_ref               = 's3://fh-pi-jerome-k-eco/greninger-lab/greninger-lab-file-share/dariia/references/phipseq_ref_kallisto/tp_oligos_kallisto'
     kal_gtf                     = "$projectDir/assets/GTF_NO_FILE"
     kal_chromosomes             = "$projectDir/assets/CHROMOSOMES_NO_FILE"
     kal_fragment_length         = ''
@@ -36,7 +36,7 @@ params {
     // Boilerplate options
     indir              =  "$projectDir/data"    
     outdir                     = "$projectDir/results"
-    target_keys                = "$projectDir/assets/GENERIC_NO_FILE"
+    target_keys                = "s3://fh-pi-jerome-k-eco/greninger-lab/greninger-lab-file-share/dariia/references/phipseq_ref_kallisto/dv_tp_library_keys_full20240502.csv"
     publish_dir_mode           = 'copy'
     // email                      = null
     // email_on_fail              = null
