refactor: cleaning unnesessary code and moving subworkflows in separate files

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,20 +8,6 @@
 
 // Global default params, used in configs
 params {
-
-    // TODO nf-core: Specify your pipeline's command line flags       
-        
-    // References
-    genome                     = null
-    igenomes_base              = 's3://ngi-igenomes/igenomes/'
-    igenomes_ignore            = false
-    fasta                      = null// MultiQC options
-    multiqc_config             = null
-    multiqc_title              = null
-    multiqc_logo               = null
-    max_multiqc_email_size     = '25.MB'
-    multiqc_methods_description = null
-
     // Cutadapt options
     trimR1                      = 44
     trimR2                      = 66
@@ -34,15 +20,11 @@ params {
     kal_fragment_length_sd      = ''
 
     // Boilerplate options
-    indir              =  "$projectDir/data"    
+    input              = null  
     outdir                     = "$projectDir/results"
     target_keys                = "s3://fh-pi-jerome-k-eco/greninger-lab/greninger-lab-file-share/dariia/references/phipseq_ref_kallisto/dv_tp_library_keys_full20240502.csv"
     publish_dir_mode           = 'copy'
-    // email                      = null
-    // email_on_fail              = null
-    // plaintext_email            = false
-    // monochrome_logs            = false
-    // hook_url                   = null
+    monochrome_logs            = false
     help                       = false
     version                    = false
 
@@ -63,7 +45,6 @@ params {
     // Schema validation default options
     validationFailUnrecognisedParams = false
     validationLenientMode            = false
-    validationSchemaIgnoreParams     = 'genomes,igenomes_base'
     validationShowHiddenParams       = false
     validate_params                  = true
 
@@ -196,11 +177,11 @@ plugins {
 }
 
 // Load igenomes.config if required
-if (!params.igenomes_ignore) {
-    includeConfig 'conf/igenomes.config'
-} else {
-    params.genomes = [:]
-}
+//if (!params.igenomes_ignore) {
+//    includeConfig 'conf/igenomes.config'
+//} else {
+ //   params.genomes = [:]
+//}
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
 // The JULIA depot path has been adjusted to a fixed path `/usr/local/share/julia` that needs to be used for packages in the container.
 // See https://apeltzer.github.io/post/03-julia-lang-nextflow/ for details on that. Once we have a common agreement on where to keep Julia packages, this is adjustable.
