--- a/conf/modules.config
+++ b/conf/modules.config
@@ -64,9 +64,9 @@ process {
 
 
 
-    withName: FASTQC {
-        ext.args = '--quiet'
-    }
+  //  withName: FASTQC {
+  //      ext.args = '--quiet'
+   // }
 
     withName: CUSTOM_DUMPSOFTWAREVERSIONS {
         publishDir = [
@@ -76,13 +76,13 @@ process {
         ]
     }
 
-    withName: 'MULTIQC' {
-        ext.args   = { params.multiqc_title ? "--title \"$params.multiqc_title\"" : '' }
-        publishDir = [
-            path: { "${params.outdir}/multiqc" },
-            mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
-    }
+ //   withName: 'MULTIQC' {
+ //       ext.args   = { params.multiqc_title ? "--title \"$params.multiqc_title\"" : '' }
+ //       publishDir = [
+  //          path: { "${params.outdir}/multiqc" },
+  //          mode: params.publish_dir_mode,
+  //          saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+  //      ]
+  //  }
 
 }
