fix: updated config to remove warning about monochrome logs required default parameter

--- a/nextflow.config
+++ b/nextflow.config
@@ -19,14 +19,17 @@ params {
     kal_fragment_length         = ''
     kal_fragment_length_sd      = ''
 
+    // kallisto output parser options
+    target_keys                = "s3://fh-pi-jerome-k-eco/greninger-lab/greninger-lab-file-share/dariia/references/phipseq_ref_kallisto/dv_tp_library_keys_full20240502.csv"
+
     // Boilerplate options
     input              = null  
     outdir                     = "$projectDir/results"
-    target_keys                = "s3://fh-pi-jerome-k-eco/greninger-lab/greninger-lab-file-share/dariia/references/phipseq_ref_kallisto/dv_tp_library_keys_full20240502.csv"
     publish_dir_mode           = 'copy'
     monochrome_logs            = false
     help                       = false
     version                    = false
+    monochromeLogs             = false
 
     // Config options
     config_profile_name        = null
