refactor: updating defalut parameters - projectRoot and monochromeLogs

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,6 +23,7 @@ params {
     target_keys                = "s3://fh-pi-jerome-k-eco/greninger-lab/greninger-lab-file-share/dariia/references/phipseq_ref_kallisto/dv_tp_library_keys_full20240502.csv"
 
     // Boilerplate options
+    projectRoot = "$baseDir"
     input              = null  
     outdir                     = "$projectDir/results"
     publish_dir_mode           = 'copy'
