--- a/nextflow.config
+++ b/nextflow.config
@@ -23,7 +23,7 @@ params {
     target_keys                = "s3://fh-pi-jerome-k-eco/greninger-lab/greninger-lab-file-share/dariia/references/phipseq_ref_kallisto/dv_tp_library_keys_full20240502.csv"
 
     // Boilerplate options
-    project_root = "$baseDir"
+    project_bin = "${baseDir}/bin"
     input              = null  
     outdir                     = "$projectDir/results"
     publish_dir_mode           = 'copy'
