feat: improved default parameters, updated README.md parameters section

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,6 +11,7 @@ params {
     // Cutadapt options
     trimR1                      = 44
     trimR2                      = 66
+    cutadapt_minimum_len        = 20
 
     // kallisto_quant options
     kal_index_ref               = 's3://fh-pi-jerome-k-eco/greninger-lab/greninger-lab-file-share/dariia/references/phipseq_ref_kallisto/tp_oligos_kallisto'
@@ -25,7 +26,7 @@ params {
     // Boilerplate options
     project_bin = "$projectDir/bin"
     input              = null  
-    outdir                     = "$projectDir/results"
+    outdir                     = "$launchDir/results"
     publish_dir_mode           = 'copy'
     monochrome_logs            = false
     help                       = false
@@ -223,7 +224,7 @@ dag {
 
 manifest {
     name            = 'nf-core/phipseqtpvac'
-    author          = """"""
+    author          = """Dariia Vyshenska"""
     homePage        = 'https://github.com/nf-core/phipseqtpvac'
     description     = """Pipeline for analysis of PhiP-Seq data for the Treponema pallidum vaccine @ Greninger Lab"""
     mainScript      = 'main.nf'
