--- a/conf/modules.config
+++ b/conf/modules.config
@@ -20,7 +20,7 @@ process {
 
 
     withName: CUTADAPT {
-        ext.args = { "-u ${params.trimR1} -U ${params.trimR2} -m 20" }
+        ext.args = { "-u ${params.trimR1} -U ${params.trimR2} -m ${params.cutadapt_minimum_len}" }
         publishDir = [
             [
                 path: { "${params.outdir}/cutadapt_out/trimmed_fastq" },
