--- a/conf/modules.config
+++ b/conf/modules.config
@@ -13,7 +13,7 @@
 process {
 
     publishDir = [
-        path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
+        path: { "${parms.outputDir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
         mode: params.publish_dir_mode,
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
@@ -23,15 +23,21 @@ process {
         ext.args = { "-u ${params.trimR1} -U ${params.trimR2} -m ${params.cutadapt_minimum_len}" }
         publishDir = [
             [
-                path: { "${params.outdir}/cutadapt_out/trimmed_fastq" },
+                path: { "${params.outputDir}/cutadapt_out/trimmed_fastq" },
                 mode: params.publish_dir_mode,
                 pattern: '*.fastq.gz',
                 enabled: true
             ],
             [
-                path: { "${params.outdir}/cutadapt_out/logs" },
+                path: { "${params.outputDir}/cutadapt_out/logs" },
                 mode: params.publish_dir_mode,
                 pattern: '*.log',
+                enabled: true
+            ],
+            [
+                path: { "${params.outputDir}/cutadapt_out" },
+                mode: params.publish_dir_mode,
+                pattern:'versions.yml',
                 enabled: true
             ]
         ]
@@ -41,7 +47,7 @@ process {
         ext.args = { "--plaintext" }
         publishDir = [
             [
-                path: { "${params.outdir}/kallisto_out/results" },
+                path: { "${params.outputDir}/kallisto_out/results" },
                 mode: params.publish_dir_mode,
                 pattern: '*',
                 enabled: true
@@ -53,36 +59,11 @@ process {
         ext.args = { "" }
         publishDir = [
             [
-                path: { "${params.outdir}/parsed_raw_counts" },
+                path: { "${params.outputDir}/parsed_raw_counts" },
                 mode: params.publish_dir_mode,
                 pattern: '*',
                 enabled: true
             ]
         ]
     }
-
-
-
-
-  //  withName: FASTQC {
-  //      ext.args = '--quiet'
-   // }
-
-    withName: CUSTOM_DUMPSOFTWAREVERSIONS {
-        publishDir = [
-            path: { "${params.outdir}/pipeline_info" },
-            mode: params.publish_dir_mode,
-            pattern: '*_versions.yml'
-        ]
-    }
-
- //   withName: 'MULTIQC' {
- //       ext.args   = { params.multiqc_title ? "--title \"$params.multiqc_title\"" : '' }
- //       publishDir = [
-  //          path: { "${params.outdir}/multiqc" },
-  //          mode: params.publish_dir_mode,
-  //          saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-  //      ]
-  //  }
-
 }
