--- a/nextflow.config
+++ b/nextflow.config
@@ -5,7 +5,8 @@
     Default config options for all compute environments
 ----------------------------------------------------------------------------------------
 */
-
+nextflow.enable.dsl = 2
+nextflow.preview.output = true
 // Global default params, used in configs
 params {
     // Cutadapt options
@@ -26,7 +27,7 @@ params {
     // Boilerplate options
     project_bin = "$projectDir/bin"
     input              = null  
-    outdir                     = "$launchDir/results"
+    outputDir                     = "results"
     publish_dir_mode           = 'copy'
     monochrome_logs            = false
     help                       = false
@@ -207,19 +208,19 @@ nextflow.enable.configProcessNamesValidation = false
 def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
 timeline {
     enabled = true
-    file    = "${params.outdir}/pipeline_info/execution_timeline_${trace_timestamp}.html"
+    file    = "${params.outputDir}/pipeline_info/execution_timeline_${trace_timestamp}.html"
 }
 report {
     enabled = true
-    file    = "${params.outdir}/pipeline_info/execution_report_${trace_timestamp}.html"
+    file    = "${params.outputDir}/pipeline_info/execution_report_${trace_timestamp}.html"
 }
 trace {
     enabled = true
-    file    = "${params.outdir}/pipeline_info/execution_trace_${trace_timestamp}.txt"
+    file    = "${params.outputDir}/pipeline_info/execution_trace_${trace_timestamp}.txt"
 }
 dag {
     enabled = true
-    file    = "${params.outdir}/pipeline_info/pipeline_dag_${trace_timestamp}.html"
+    file    = "${params.outputDir}/pipeline_info/pipeline_dag_${trace_timestamp}.html"
 }
 
 manifest {
