refactor: moving kallisto index and key files to assets from S3

--- a/nextflow.config
+++ b/nextflow.config
@@ -14,14 +14,14 @@ params {
     cutadapt_minimum_len        = 20
 
     // kallisto_quant options
-    kal_index_ref               = 's3://fh-pi-jerome-k-eco/greninger-lab/greninger-lab-file-share/dariia/references/phipseq_ref_kallisto/tp_oligos_kallisto'
+    kal_index_ref               = "$projectDir/assets/tp_oligos_kallisto_idx"
     kal_gtf                     = "$projectDir/assets/GTF_NO_FILE"
     kal_chromosomes             = "$projectDir/assets/CHROMOSOMES_NO_FILE"
     kal_fragment_length         = ''
     kal_fragment_length_sd      = ''
 
     // kallisto output parser options
-    target_keys                = "s3://fh-pi-jerome-k-eco/greninger-lab/greninger-lab-file-share/dariia/references/phipseq_ref_kallisto/dv_tp_library_keys_full20240502.csv"
+    target_keys                = "$projectDir/assets/dv_tp_library_keys_full20240502.csv"
 
     // Boilerplate options
     project_bin = "$projectDir/bin"
