--- a/nextflow.config
+++ b/nextflow.config
@@ -59,12 +59,12 @@ params {
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
 
-// Load nf-core custom profiles from different Institutions
-try {
-    includeConfig "${params.custom_config_base}/nfcore_custom.config"
-} catch (Exception e) {
-    System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
-}
+// // Load nf-core custom profiles from different Institutions
+// try {
+//     includeConfig "${params.custom_config_base}/nfcore_custom.config"
+// } catch (Exception e) {
+//     System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
+// }
 
 // Load nf-core/phipseqtpvac custom profiles from different institutions.
 // Warning: Uncomment only if a pipeline-specific institutional config already exists on nf-core/configs!
@@ -207,19 +207,19 @@ nextflow.enable.configProcessNamesValidation = false
 
 def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
 timeline {
-    enabled = true
+    enabled = false
     file    = "${params.outputDir}/pipeline_info/execution_timeline_${trace_timestamp}.html"
 }
 report {
-    enabled = true
+    enabled = false
     file    = "${params.outputDir}/pipeline_info/execution_report_${trace_timestamp}.html"
 }
 trace {
-    enabled = true
+    enabled = false
     file    = "${params.outputDir}/pipeline_info/execution_trace_${trace_timestamp}.txt"
 }
 dag {
-    enabled = true
+    enabled = false
     file    = "${params.outputDir}/pipeline_info/pipeline_dag_${trace_timestamp}.html"
 }
 
