--- a/nextflow.config
+++ b/nextflow.config
@@ -30,7 +30,7 @@ params {
     outputDir                     = "results"
     publish_dir_mode           = 'copy'
     monochrome_logs            = false
-    help                       = false
+    // help                       = false //I removed code that uses this variable
     version                    = false
     monochromeLogs             = false
 
@@ -59,20 +59,6 @@ params {
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
 
-// // Load nf-core custom profiles from different Institutions
-// try {
-//     includeConfig "${params.custom_config_base}/nfcore_custom.config"
-// } catch (Exception e) {
-//     System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
-// }
-
-// Load nf-core/phipseqtpvac custom profiles from different institutions.
-// Warning: Uncomment only if a pipeline-specific institutional config already exists on nf-core/configs!
-// try {
-//   includeConfig "${params.custom_config_base}/pipeline/phipseqtpvac.config"
-// } catch (Exception e) {
-//   System.err.println("WARNING: Could not load nf-core/config/phipseqtpvac profiles: ${params.custom_config_base}/pipeline/phipseqtpvac.config")
-// }
 profiles {
     debug {
         dumpHashes             = true
@@ -181,17 +167,6 @@ singularity.registry = 'quay.io'
 plugins {
     id 'nf-validation@1.1.3' // Validation of pipeline parameters and creation of an input channel from a sample sheet
 }
-
-// Load igenomes.config if required
-//if (!params.igenomes_ignore) {
-//    includeConfig 'conf/igenomes.config'
-//} else {
- //   params.genomes = [:]
-//}
-// Export these variables to prevent local Python/R libraries from conflicting with those in the container
-// The JULIA depot path has been adjusted to a fixed path `/usr/local/share/julia` that needs to be used for packages in the container.
-// See https://apeltzer.github.io/post/03-julia-lang-nextflow/ for details on that. Once we have a common agreement on where to keep Julia packages, this is adjustable.
-
 env {
     PYTHONNOUSERSITE = 1
     R_PROFILE_USER   = "/.Rprofile"
